--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   dartssh2: ^2.8.2
   shared_preferences: ^2.2.2
   path_provider: ^2.1.2
+  flutter_screenutil: ^5.9.0
+  google_fonts: ^6.1.0
+  page_transition: ^2.1.0
+  animated_splash_screen: ^1.3.0
 
 dev_dependencies:
   flutter_test:
