--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   google_fonts: ^6.1.0
   page_transition: ^2.1.0
   animated_splash_screen: ^1.3.0
+  flutter_bounceable: ^1.1.0
+  awesome_dialog: ^3.2.0
+  toasty_box: ^1.0.3
 
 dev_dependencies:
   flutter_test:
@@ -66,8 +69,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
