--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   flutter_bounceable: ^1.1.0
   awesome_dialog: ^3.2.0
   toasty_box: ^1.0.3
+  animate_do: ^3.3.3
+  flutter_animated_icons: ^1.0.1
 
 dev_dependencies:
   flutter_test:
@@ -70,7 +72,11 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/images/img_group_2.png
+    - assets/images/img_saly_22.png
     - assets/images/
+
+
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
